# vobjectx

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .sourcery.yaml  ACKNOWLEDGEMENTS.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py
.github/: ACKNOWLEDGEMENTS.md  dependabot.yml
.github/test-runner/: action.yml
.github/test-setup/: action.yml
.github/workflows/: ci-lint.yml  code-lint.yml  code-test.yml  pre-commit.yml  release.yml  repo-cleaner.yml  test.yml
docs/: index.md  requirements.txt
docs/api/: index.md  vobjectx.md
docs/api/vobjectx/: datatypes.md  helper.md  ical.md
test_files/: availablity.ics  radicale-1238-0.ics  radicale-1238-1.ics  simple_2_0_test.ics  vobject_0050.ics
tests/: __init__.py  common.py  test_behaviors.py  test_calendar_serialization.py  test_change_tz.py  test_cli.py  test_compatibility.py  test_from_doctest.py  test_icalendar.py  test_ics_diff.py  test_utils.py  test_vobject_parsing.py  test_vobjects.py  test_win32tz.py  tests.py
tests/test_files/: freebusy.ics  quoted-printable.ics  radicale-0816.ics  radicale-0827.ics  radicale-1238-2.ics  radicale-1238-3.ics  recurrence.ics  simple_2_0_test.ics
vobject/: __init__.py  base.py  behavior.py  change_tz.py  custom_class.py  exceptions.py  hcalendar.py  icalendar.py  ics_diff.py  patterns.py  vcard.py  win32tz.py
vobject/helper/: __init__.py  config.py  constants.py  converter.py  funcs.py  imports_.py  time_funcs.py  wrappers.py
vobjectx/: __about__.py  __init__.py  base.py  behavior.py  change_tz.py  custom_class.py  exceptions.py  hcalendar.py  icalendar.py  ics_diff.py  parser.py  patterns.py  registry.py  vcard.py  win32tz.py
vobjectx/datatypes/: __init__.py  alias.py  time_types.py
vobjectx/helper/: __init__.py  config.py  constants.py  constants_tmp.py  converter.py  funcs.py  imports_.py  parser.py  serializer.py  time_funcs.py  wrappers.py
vobjectx/ical/: __init__.py  ical_helper.py  ical_parser.py  registry.py
