[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vobjectx"
dynamic = ["version"]
description = "A full-featured Python3 package for parsing and creating \"iCalendar and vCard files\""
readme = "README.md"
authors = [
    { name = "Jeffrey Harris", email = "jeffrey@osafoundation.org" },
    { name = "David Arnold", email = "davida@pobox.com" },
    { name = "Rishabh B", email = "null@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Text Processing"
]
keywords = ["vobjectx", "icalendar", "vcard", "ics", "vcs", "hcalendar", "contacts", "vobjectx", "parser"]
dependencies = ["python-dateutil >= 2.5.0; python_version < '3.10'",
    "python-dateutil >= 2.7.0; python_version >= '3.10'", "pytz>=2019.1", "tzdata; sys_platform == 'win32'"]
requires-python = ">=3.9"
[project.optional-dependencies]
lint = ["pre-commit", "pylint"]
test = ["pytest", "pytest-cov"]

[project.scripts]
ics_diff = "vobject.ics_diff:main"
change_tz = "vobject.change_tz:main"

[project.urls]
Homepage = "https://github.com/rsb-23/vobjectx"
Repository = "https://github.com/rsb-23/vobjectx"
Issues = "https://github.com/rsb-23/vobjectx/issues"
Releases = "https://github.com/rsb-23/vobjectx/releases"

[tool.hatch.version]
path = "vobject/__about__.py"
[tool.hatch.build.targets.wheel]
packages = ["vobject"]

[tool.hatch.build]
include = ["README.md", "LICENSE"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]
line-length = 120
skip-magic-trailing-comma = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E501", "W503"]
exclude = [".git", "__pycache__", "venv"]
per-file-ignores = ["*/__init__.py: F401", "*/imports_.py: F401"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
split_on_trailing_comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]  # Path to your test files

[tool.coverage.report]
fail_under = 75.0
[tool.coverage.run]
source = ["vobject/"]
omit = ["tests/*", "wrappers.py"]
